--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,4 +1,7 @@
 {
+  "tasks": {
+    "dev": "deno run --allow-net --allow-read --allow-write scripts/server.ts"
+  },
   "imports": {
     "@std/async": "jsr:@std/async@^1.0.16"
   },
